fixed the spacing between sections - my fault they were messed up

--- a/src/app/tl-mega-menu/tl-mega-menu.component.scss
+++ b/src/app/tl-mega-menu/tl-mega-menu.component.scss
@@ -80,7 +80,7 @@
           text-align: start;
           color: var(--tl-black);
           font-size: 17px;
-          font-family: sans-serif;
+          font-family: var(--tl-font-family-sans-serif);
           font-weight: 300;
           wvr-text {
             font-weight: 400;
@@ -105,7 +105,7 @@
           text-align: start;
           color: var(--tl-black);
           font-size: 17px;
-          font-family: sans-serif;
+          font-family: var(--tl-font-family-sans-serif);
           font-weight: 300;
           border-bottom: 0.5px solid #e4e4e4;
           text-decoration: none;
@@ -122,7 +122,7 @@
           text-align: start;
           color: var(--tl-black);
           font-size: 17px;
-          font-family: sans-serif;
+          font-family: var(--tl-font-family-sans-serif);
           font-weight: 300;
           border-bottom: 0.5px solid #e4e4e4;
         }
